Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Added modified version of Hotfix_20070319 for the CPSUserFolder product.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 